@@ -1,6 +1,6 @@
 // TortoiseSVN - a Windows shell extension for easy version control
 
-// Copyright (C) 2007 - TortoiseSVN
+// Copyright (C) 2007-2008 - TortoiseSVN
 
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License
@@ -96,7 +96,8 @@ bool DropCopyAddCommand::Execute()
 	CSVNProgressDlg progDlg;
 	theApp.m_pMainWnd = &progDlg;
 	progDlg.SetCommand(CSVNProgressDlg::SVNProgress_Add);
-	progDlg.SetAutoClose(parser.GetLongVal(_T("closeonend")));
+	if (parser.HasVal(_T("closeonend")))
+		progDlg.SetAutoClose(parser.GetLongVal(_T("closeonend")));
 	progDlg.SetPathList(copiedFiles);
 	ProjectProperties props;
 	props.ReadPropsPathList(copiedFiles);
